stack.yml
Resources:
  AppNode:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-db710fa3
      KeyName: awsblog
      SecurityGroups:
        - !Ref AppNodeSG
      UserData: !Base64 |
        #!/bin/bash
         sudo apt-get update -qq
         sudo apt-get install -y apt-transport-https ca-certificates
         sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
         echo "deb https://apt.dockerproject.org/repo ubuntu-xenial main" | tee /etc/apt/sources.list.d/docker.list
         sudo  apt-get update -qq
         sudo apt-get purge lxc-docker || true
         sudo  apt-get -y install linux-image-extra-$(uname -r) linux-image-extra-virtual
         sudo apt-get -y install docker-engine
         usermod -aG docker ubuntu
         mkdir -p /etc/systemd/system/docker.service.d
         printf "[Service]\nExecStart=\nExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375\n" >>  /etc/systemd/system/docker.service.d/docker.conf
         systemctl daemon-reload
         systemctl restart docker
  
      
  AppNodeSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: for the app nodes that allow ssh, http and docker ports
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '2375'
        ToPort: '2375'
        CidrIp: 0.0.0.0/0

  
  DatabaseInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: "gurublog"
      Engine: MySQL
      MasterUsername: guruprasad
      MasterUserPassword: guruprasad123
      DBInstanceClass: db.t2.micro
      AllocatedStorage: '5'
      DBSecurityGroups:
        - !Ref DatabaseSG
  DatabaseSG:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: Security Group for RDS public access
      DBSecurityGroupIngress:
        - CIDRIP: 0.0.0.0/0
